[package]
name = "wm-ts-nav"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"

[profile.release]
opt-level = 2
lto = "thin"
