[package]
name = "bedrock_test"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1.1.6"
aws-sdk-bedrockruntime = "1.82.0"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
