[package]
name = "windmill-api-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_assets"
path = "src/lib.rs"

[dependencies]
windmill-api-auth.workspace = true
windmill-common = { workspace = true, default-features = false }
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
