[package]
name = "windmill-api-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_auth"
path = "src/lib.rs"

[features]
default = []
enterprise = ["windmill-common/enterprise"]
cloud = ["windmill-common/cloud"]
private = ["windmill-common/private"]
no_auth = []
mcp = ["dep:windmill-mcp", "windmill-mcp/server", "windmill-mcp/auth"]

[dependencies]
windmill-common = { workspace = true, default-features = false }
windmill-audit.workspace = true
windmill-mcp = { workspace = true, optional = true }
axum.workspace = true
http.workspace = true
serde.workspace = true
uuid.workspace = true
itertools.workspace = true
