[package]
name = "windmill-api-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "windmill_api_client"
path = "./src/lib.rs"


[dependencies]
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor", rev = "a2d1100413e5d755009e9d04ced20393c84352e9" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
rand.workspace = true
base64.workspace = true
openapiv3 = "=1.0.2"

[build-dependencies]
prettyplease = "0.1.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", rev = "a2d1100413e5d755009e9d04ced20393c84352e9" }
serde_json = "1.0"
syn = "1.0"
openapiv3 = "=1.0.2"