[package]
name = "windmill-api-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_client"
path = "./src/lib.rs"


[dependencies]
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor", rev = "3d96016ae8d422e90513b2d34fb5b63eeab30b01" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
rand.workspace = true
base64.workspace = true
openapiv3 = "=1.0.2"

