[package]
name = "windmill-api-configs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_configs"
path = "src/lib.rs"

[features]
default = []
enterprise = ["dep:windmill-autoscaling"]
private = []
python = []
run_inline = ["dep:windmill-worker", "dep:itertools"]

[dependencies]
windmill-api-auth.workspace = true
windmill-common = { workspace = true, default-features = false }
windmill-audit.workspace = true
windmill-autoscaling = { workspace = true, optional = true }
windmill-worker = { workspace = true, optional = true }
axum.workspace = true
chrono.workspace = true
itertools = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
