[package]
name = "windmill-api-groups"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_groups"
path = "src/lib.rs"

[features]
default = []
enterprise = ["windmill-common/enterprise"]
private = ["windmill-common/private", "windmill-api-workspaces/private"]

[dependencies]
windmill-common = { workspace = true, default-features = false }
windmill-api-auth.workspace = true
windmill-api-workspaces.workspace = true
windmill-audit.workspace = true
windmill-git-sync.workspace = true

axum.workspace = true
chrono.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sql-builder.workspace = true
sqlx.workspace = true
uuid.workspace = true
