[package]
name = "windmill-api-jobs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_jobs"
path = "src/lib.rs"

[features]
default = []
enterprise = ["windmill-common/enterprise"]

[dependencies]
windmill-api-auth.workspace = true
windmill-api-sse.workspace = true
windmill-common = { workspace = true, default-features = false }
windmill-queue.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
http.workspace = true
tower-http.workspace = true
base64.workspace = true
anyhow.workspace = true
tracing.workspace = true
sql-builder.workspace = true
tokio.workspace = true
hyper.workspace = true
lazy_static.workspace = true
