[package]
name = "windmill-api-npm-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "windmill_api_npm_proxy"
path = "src/lib.rs"

[dependencies]
windmill-api-auth.workspace = true
windmill-common = { workspace = true, default-features = false }
axum.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tar.workspace = true
tower-http.workspace = true
tracing.workspace = true
